manifests/dummy-chassis-app/auto/overlays/aws-randd-staging/gateway.yaml
kind: Gateway
apiVersion: networking/v1
metadata:
  name: dummy-chassis-app
spec:
  servers:
    - hosts:
        - dummy-chassis-app.stg.rd.ds.sansan.com
        - dummy-chassis-app.blue.stg.rd.ds.sansan.com
        - dummy-chassis-app.green.stg.rd.ds.sansan.com
      name: http
  selector:
    istio: ingressgateway
