manifests/dummy-chassis-app/auto/overlays/aws-randd-staging/virtual_service.yaml
kind: VirtualService
apiVersion: networking/v1
metadata:
  name: dummy-chassis-app
spec:
  hosts:
    - dummy-chassis-app.stg.rd.ds.sansan.com
    - dummy-chassis-app.blue.stg.rd.ds.sansan.com
    - dummy-chassis-app.green.stg.rd.ds.sansan.com
